# GH_CBBS_PAGE

./: .gitignore  404.html  AGENTS.md  README.md  astro.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  site.webmanifest  sitemap-0.xml  sitemap-index.xml  sw.js  vitest.config.ts
3d-print-work/: README.md  hardware-inventory.md  research-plan.md
_astro/: BaseLayout.CTipzxwC.css  BaseLayout.DMfCbEVi.css  cbbs-splash-p800-contact-sheet.llUGumzc_TexPC.avif  cbbs-splash-p800-contact-sheet.llUGumzc_Z19POEL.avif  cbbs-splash-p800-contact-sheet.llUGumzc_Z1VI33d.avif  cbbs-splash-p800-contact-sheet.llUGumzc_Z2bSxcX.avif  current-dashboard.D9_U3fOf_1FGr5R.avif  current-dashboard.D9_U3fOf_Z1D5tBX.avif  current-dashboard.D9_U3fOf_ZzhWS4.avif  current-dashboard.D9_U3fOf_hSdM8.avif  current-dashboard.D9_U3fOf_n1hoW.avif  current-hub-monitor.BIC1VquR_1wfhxS.avif  current-hub-monitor.BIC1VquR_AMj4J.avif  current-hub-monitor.BIC1VquR_HbXLy.avif  current-hub-monitor.BIC1VquR_Z1gTHU1.avif  current-hub-monitor.BIC1VquR_Zr8ILt.avif  current-node.CIL0Y1H2_1Klg03.avif  current-node.CIL0Y1H2_Xn3vN.avif  current-node.CIL0Y1H2_Z1lkSzg.avif  current-node.CIL0Y1H2_Z2sN6kz.avif  current-node.CIL0Y1H2_pSJ7M.avif  current-windows-build-queue.slryR-1P_1s50Vs.avif  (+23 more)
tools/cad/: README.md  pyproject.toml
tools/cad/src/cbbs_cad/: __init__.py  __main__.py  audit.py  cli.py  fusion_agent.py  fusion_job.py  fusion_workflow.py  generate.py  k1_monitor.py  mesh.py  models.py  primitives.py  print_package.py  report.py  specs.py
tools/cad/tests/: test_fusion_agent.py  test_fusion_workflow.py  test_generation.py  test_k1_monitor.py  test_optional_tooling_imports.py  test_print_package.py  test_specs.py
(+215 files in other folders)
