[project]
name = "cbbs-cad"
version = "0.1.0"
description = "Public-safe CBBS CAD automation tools for source-derived fit-test artifacts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cadquery>=2.5",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "rich>=13.9",
  "trimesh[easy]>=4.5",
  "typer>=0.15",
]

[project.scripts]
cbbs-cad = "cbbs_cad.cli:app"

[dependency-groups]
cad-eval = [
  "build123d>=0.10.0",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]
fusion-ui-win = [
  "pywinauto>=0.6.9 ; sys_platform == 'win32'",
]
mesh-eval = [
  "manifold3d>=3.4.1",
  "open3d>=0.19.0",
  "pyvista>=0.48.0",
]
monitor = [
  "httpx>=0.28",
  "mss>=10.2.0",
  "opencv-python-headless>=4.10",
  "pillow>=11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
